--- a/Server/.gitignore
+++ b/Server/.gitignore
@@ -1,1 +1,21 @@
-.env
+# Python
+__pycache__
+*.pyc
+*.pyo
+*.env
+venv
+
+# MacOS
+.DS_Store
+
+# Logs
+*.log
+logs
+
+# IDEs
+.idea
+.vscode
+
+
+#Migrations
+migrations
