--- a/Client/package.json
+++ b/Client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "client",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
+    "react-secure-storage": "^1.3.2",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.12",
@@ -33,6 +34,6 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "vite": "^5.4.2"
+    "vite": "^7.0.6"
   }
 }
